k8s/apps/warpgate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warpgate
  labels:
    app: warpgate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: warpgate
  template:
    metadata:
      labels:
        app: warpgate
    spec:
      nodeSelector:
        kubernetes.io/hostname: xgm-hm
      securityContext:
        fsGroup: 1000
      containers:
        - name: warpgate
          image: ghcr.io/warp-tech/warpgate:0.29.0@sha256:18069aa69b61eda90e4fa5a783ba7b9d54481496d3f20cf65bf9705b32faf975
          ports:
            - name: http
              containerPort: 8888
            - name: ssh
              containerPort: 2223
              hostPort: 2223
          resources:
            requests:
              memory: 96Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          readinessProbe:
            exec:
              command: ["warpgate", "healthcheck"]
            initialDelaySeconds: 10
            periodSeconds: 30
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: warpgate-data
