k8s/apps/warpgate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warpgate
spec:
  ingressClassName: traefik
  rules:
    - host: warpgate.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warpgate
                port:
                  number: 8888
